# nmcp

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  cliff.toml  deny.toml  flake.nix  justfile
.github/workflows/: ci.yml
crates/operator/: Cargo.toml  README.md  lib.rs  main.rs
crates/operator/application/: mod.rs  pool.rs  server.rs  sse.rs
crates/operator/controller/: attach.rs  create_server_pod_patch.rs  create_server_service_patch.rs  get_server_pod.rs  get_server_pool.rs  get_server_service.rs  getter.rs  is_server_up.rs  list_pools.rs  list_servers.rs  manager.rs  mod.rs  operator.rs  reconcile_server.rs  server_create_pod_patch.rs  server_create_service_patch.rs  server_down.rs  server_get_pod.rs  server_get_pool.rs  server_is_up.rs  server_reconciler.rs  server_should_be_up.rs  server_start_operator.rs  server_start_pod.rs  server_start_service.rs  server_stop_pod.rs  server_stop_service.rs  server_up.rs  service.rs  should_server_be_up.rs  start_server.rs  start_server_operator.rs  start_server_pod.rs  start_server_service.rs  status.rs  stop_server.rs  stop_server_pod.rs  stop_server_service.rs  stream.rs
crates/operator/resources/: mod.rs  pool.rs  pool_spec.rs  pool_status.rs  server.rs  server_spec.rs  server_status.rs  server_transport.rs
crates/operator/server/: metrics.rs  mod.rs  pool_create.rs  pool_delete.rs  pool_get.rs  pool_list.rs  pool_update.rs  server_create.rs  server_delete.rs  server_get.rs  server_list.rs  server_message.rs  server_sse.rs  server_update.rs
crates/operator/test_utils/: create_crd_pools.rs  create_crd_servers.rs  delete_crd_pools.rs  delete_crd_servers.rs  get_client.rs  mod.rs  test_context.rs  with_namespace.rs
crates/operator/transport/: event.rs  mod.rs  stdio.rs
crates/operator/utils/: error.rs  get_kube_client.rs  mod.rs  sse_event.rs
crates/server/: README.md
examples/k8s-manifests/: McpPool.default.yaml  McpServer.giphy-1.yaml
examples/kubernetes/: MCPPool.Schema.json  MCPServer.Schema.json  docker-compose.yaml
examples/kubernetes/manifests/: CRD.MCPPool.yaml  CRD.MCPServer.yaml  Deployment.nmcp-gateway.yaml  Deployment.nmcp-operator.yaml  MCPPool.default.yaml  MCPServer.context7.yaml  MCPServer.kubernetes.yaml  RBAC.yaml  Service.nmcp-gateway.yaml
examples/mcp-client-ts/: eslint.config.mjs  index.ts  package.json  pnpm-lock.yaml  tsconfig.json
k3s/: docker-compose.yaml  schema-crd-pool.json  schema-crd-server.json  setup-dashboard.sh
kube/: docker-compose.yaml  manifest.yaml  setup.sh
scripts/: testMcpServer.ts
src/: cli.rs  lib.rs  main.rs
src/controller/: into_pod.rs  into_resource.rs  into_service.rs  manager.rs  mod.rs  operator.rs  status.rs
src/gateway/: controller.rs  docs.rs  event.rs  health.rs  health_docs.rs  mod.rs  pool.rs  server.rs  sse.rs  sse_docs.rs
src/manager/: docs.rs  health.rs  health_docs.rs  mod.rs  pool.rs  pool_body.rs  pool_docs.rs  router.rs  server.rs  server_body.rs  server_docs.rs
src/pool/: mod.rs  pool_controller.rs  pool_controller_assert_crd_exists.rs  pool_controller_create_server_resource.rs  pool_controller_reconcile.rs  pool_controller_start.rs  pool_controller_update_status.rs  pool_crd.rs  pool_crd_fixture.rs  pool_crd_schema_fixture.rs
src/program/: get_client.rs  get_pool_crd.rs  get_pool_schema.rs  get_server_crd.rs  get_server_schema.rs  mod.rs  operator_start.rs  program_crd_pool.rs  program_crd_server.rs  program_oparator_start.rs  program_run.rs  program_schema_pool.rs  program_schema_server.rs  program_struct.rs  run.rs
src/resources/: mod.rs  pool.rs  pool_body.rs  pool_controller.rs  pool_spec.rs  pool_status.rs  server.rs  server_body.rs  server_condition.rs  server_controller.rs  server_spec.rs  server_status.rs  server_transport.rs  trait_into_resource.rs  trait_manager.rs
src/server/: mod.rs  server_controller.rs  server_controller_assert_crd_exists.rs  server_controller_create_pod.rs  server_controller_create_service.rs  server_controller_reconcile.rs  server_controller_start.rs  server_controller_update_status.rs  server_crd.rs  server_crd_fixture.rs  server_crd_schema_fixture.rs
src/server/controller/: assert_crd_exists.rs  mod.rs  reconcile.rs  reconcile_apply.rs  reconcile_cleanup.rs  start_operator.rs  update_status.rs
src/server/crd/: env_var.rs  mod.rs  spec.rs  spec_impl.rs  status.rs  transport.rs
src/test_utils/: test_context.rs
src/tests/: mod.rs  test_context.rs  test_context_create_crd_pools.rs  test_context_create_crd_servers.rs  test_context_delete_crd_pools.rs  test_context_delete_crd_servers.rs  test_context_get_client.rs  test_context_with_namespace.rs
src/transport/: event.rs  stdio.rs
src/utils/: constants.rs  error.rs  get_kube_client.rs  logs.rs  mod.rs  serialization.rs  serialize.rs  status.rs  system_status.rs  task.rs  task_map.rs
src/utils/error/: backtrace.rs  error_body.rs  error_code.rs  error_from_io.rs  error_from_kube.rs  error_from_kube_runtime_controller.rs  error_from_kube_runtime_finalizer.rs  error_from_kube_runtime_watcher.rs  error_from_tokio.rs  error_impl.rs  error_inner.rs  error_message.rs  error_name.rs  mod.rs  result.rs
src/utils/tracing/: formatter_detailed.rs  install.rs  mod.rs
src/utils/transport/: mod.rs  transport_peer.rs  transport_stdio.rs
