[package]
name = "nmcp"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Stanley Horwood <stanley.horwood@nanoworks.io>"]

[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Maximize size reduction optimizations
panic = "abort"   # Remove panic unwinding code
strip = true      # Strip symbols from binary

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros"] }
axum_thiserror = "0.1.0"
chrono = { version = "0.4.41", features = ["serde"] }
futures = "0.3.31"
k8s-openapi = { version = "0.25.0", features = ["v1_30", "schemars"] }
kube = { version = "1.0.0", features = ["runtime", "derive", "client", "ws"] }
once_cell = "1.21.3"
schemars = { version = "0.8.22", features = ["chrono"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yml = "0.0.12"
thiserror = "2.0.12"
tokio = { version = "1.45.0", features = ["full"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tower-http = "0.6.4"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
uuid = { version = "1.16.0", features = ["v4", "serde"] }

# Command Line Argument Parser for Rust.
[dependencies.clap]
features = ["derive", "env", "cargo", "wrap_help"]
version = "4.5.38"

# Official MCP protocol implementation for Rust.
[dependencies.rmcp]
branch = "main"
features = ["client", "server", "schemars"]
git = "https://github.com/modelcontextprotocol/rust-sdk"

# OpenAPI documentation generation for Axum.
[dependencies.aide]
features = [
  "axum",
  "axum-json",
  "axum-query",
  "axum-matched-path",
  "axum-extra",
  "axum-extra-json-deserializer",
  "swagger",
  "scalar",
  "redoc",
  "macros",
]
version = "0.14.2"

[dev-dependencies.testcontainers]
version = "0.24.0"
features = ["reusable-containers"]

[dev-dependencies.testcontainers-modules]
version = "0.12.0"
features = ["k3s"]

[[bin]]
name = "nmcp"
path = "src/main.rs"
