[package]
name = "unmcp"
version.workspace = true
edition.workspace = true
description = "Kubernetes operator for managed MCP servers"
license.workspace = true

[dependencies]
kube = { version = "0.99.0", features = ["runtime", "derive", "client", "ws"] }
k8s-openapi = { version = "0.24.0", features = ["v1_30", "schemars"] }
schemars = { version = "0.8.12", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version =  "0.1.17", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = "0.3"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
anyhow = "1.0"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4", "serde"] }
testcontainers = { version = "0.23.3" }
testcontainers-modules = { version = "0.11.6", features = ["k3s"] }
http = "0.2"
rand = "0.9.1"
assert-json-diff = "2.0.2"
structopt = "0.3.26"
pretty_assertions = { version = "1.4.1", default-features = false, features = ["alloc"] }
reqwest = "0.12.15"
prometheus = "0.13.3"
prometheus-metric-storage = "0.5.0"
lazy_static = "1.4.0"
clap = { version = "4.4.11", features = ["derive"] }
tower-http = { version = "0.6.4", features = ["trace"] }
kube-client = "0.99.0"
strum_macros = "0.27.1"
syn = "2.0.101"
axum = { version = "0.8.4", features = ["macros"] }
axum_thiserror = "0.1.0"
tower = "0.5.2"

[dependencies.rmcp]
git = "https://github.com/shorwood/rust-sdk.git"
branch = "shorwood/schemars-json-schema"
features = [
  "client",
  "server",
  "schemars"
]

[dependencies.aide]
version = "0.14.2"
features = [
  "axum",
  "axum-json",
  "axum-query",
  "axum-matched-path",
  "axum-extra",
  "axum-extra-json-deserializer",
  "swagger",
  "scalar",
  "redoc",
  "macros"
]

[[bin]]
name = "unmcp"
path = "main.rs"

[lib]
name = "unmcp"
path = "lib.rs"
